--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,19 @@ body {
   max-width: 400px;
   width: 100%;
   text-align: center;
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+      transform: translateY(-20px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
 }
 
 form {
@@ -25,12 +38,16 @@ form {
 
 h2 {
   color: #343a40;
+  opacity: 0;
+  animation: fadeIn 1s forwards 0.5s;
 }
 
 .alert {
   padding: 15px;
   margin: 15px 0;
   border-radius: 8px;
+  opacity: 0;
+  animation: fadeIn 1s forwards 0.8s;
 }
 
 .alert-success {
@@ -50,6 +67,8 @@ input {
   padding: 15px;
   border: 1px solid #ced4da;
   border-radius: 8px;
+  opacity: 0;
+  animation: fadeIn 1s forwards 1.1s;
 }
 
 button {
@@ -59,15 +78,21 @@ button {
   border: none;
   border-radius: 8px;
   cursor: pointer;
+  opacity: 0;
+  animation: fadeIn 1s forwards 1.4s;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #8cb6e3;
 }
 
 a {
   text-decoration: none;
   color: #007bff;
+  opacity: 0;
+  animation: fadeIn 1s forwards 1.7s;
+  transition: color 0.3s;
 }
 
 a:hover {
@@ -75,8 +100,3 @@ a:hover {
   color: #0056b3;
 }
 
-@media (max-width: 768px) {
-  .container {
-      margin: 20px;
-  }
-}
