--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
             {{ form.password.label }} {{ form.password(size=20) }}
             {{ form.submit }}
         </form>
-        <p>Don't have an account? <a href="{{ url_for('register') }}">Sign up here</a>.</p>
+        <p>Don't have an account, We got you! <a href="{{ url_for('register') }}">Sign up here</a>.</p>
     </div>
 </body>
 </html>
